--- a/app/src/main/res/layout/manuka_order_item_layout.xml
+++ b/app/src/main/res/layout/manuka_order_item_layout.xml
@@ -4,192 +4,183 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/colorWhite"
-    android:orientation="vertical"
-    android:layout_margin="@dimen/_12sdp"
-    android:padding="@dimen/_12sdp">
+    android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardElevation="4dp"
+        app:cardElevation="@dimen/_8sdp"
         app:cardUseCompatPadding="true">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="8dp">
-
-            <ImageView
-                android:id="@+id/orderItemImage"
-                android:layout_width="120dp"
-                android:layout_height="80dp"
-                android:layout_gravity="start"
-                android:contentDescription="@string/continueBtn"></ImageView>
+            android:orientation="vertical"
+            android:padding="@dimen/_12sdp">
 
             <LinearLayout
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical"
-                android:paddingLeft="10dp">
+                android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/orderItemName"
+                <ImageView
+                    android:id="@+id/orderItemImage"
+                    android:layout_width="120dp"
+                    android:layout_height="80dp"
+                    android:layout_gravity="start"
+                    android:contentDescription="@string/continueBtn"
+                    android:padding="@dimen/_4sdp"></ImageView>
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_gravity="center_vertical"
+                    android:orientation="vertical"
+                    android:paddingStart="@dimen/_8sdp"
+                    android:paddingEnd="@dimen/_8sdp">
+
+                    <TextView
+                        android:id="@+id/orderItemName"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="serif"
+                        android:gravity="start"
+                        android:text="@string/loading"
+                        android:textColor="@color/colorBlack"
+                        android:textSize="@dimen/_12sdp"
+                        android:textStyle="bold"></TextView>
+
+                    <TextView
+                        android:id="@+id/orderItemCat"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="start"
+                        android:text="@string/loading"
+                        android:textSize="@dimen/_12sdp"></TextView>
+
+                    <TextView
+                        android:id="@+id/orderItemPrice"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="serif"
+                        android:gravity="start"
+                        android:text="@string/loading"
+                        android:textColor="#088F83"
+                        android:textSize="@dimen/_12sdp"
+                        android:textStyle="bold"></TextView>
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:baselineAligned="false"
+                android:orientation="horizontal">
+
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="4dp"
+                    android:layout_weight="1"
+                    android:orientation="vertical"
+                    android:padding="@dimen/_6sdp">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/placed_date"
+                        android:textSize="@dimen/_10sdp"></TextView>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/payment_mode"
+                        android:textSize="@dimen/_10sdp"></TextView>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/payment_status"
+                        android:textSize="@dimen/_10sdp"></TextView>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="vertical"
+                    android:padding="@dimen/_6sdp">
+
+                    <TextView
+                        android:id="@+id/orderPaymentDate"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="end"
+                        android:text="@string/loading"
+                        android:textSize="@dimen/_10sdp"></TextView>
+
+                    <TextView
+                        android:id="@+id/orderPaymentMode"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="end"
+                        android:text="@string/loading"
+                        android:textSize="@dimen/_10sdp"
+                        android:textStyle="bold"></TextView>
+
+                    <TextView
+                        android:id="@+id/orderPaymentStatus"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="serif"
+                        android:gravity="end"
+                        android:text="@string/loading"
+                        android:textColor="@color/colorPrimaryDark"
+                        android:textSize="@dimen/_10sdp"
+                        android:textStyle="bold"></TextView>
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/colorHome"
+                android:orientation="horizontal"
+                android:paddingStart="@dimen/_6sdp"
+                android:paddingTop="@dimen/_4sdp"
+                android:paddingEnd="@dimen/_6sdp"
+                android:paddingBottom="@dimen/_4sdp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:fontFamily="serif"
-                    android:gravity="start"
-                    android:text="@string/loading"
+                    android:text="@string/orderItemPaymentTotal"
                     android:textColor="@color/colorBlack"
-                    android:textSize="16sp"
+                    android:textSize="@dimen/_10sdp"
                     android:textStyle="bold"></TextView>
 
                 <TextView
-                    android:id="@+id/orderItemCat"
-                    android:layout_width="match_parent"
+                    android:id="@+id/orderPaymentTotal"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="4dp"
-                    android:gravity="start"
-                    android:text="@string/loading"
-                    android:textSize="16sp"></TextView>
-
-                <TextView
-                    android:id="@+id/orderItemPrice"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:fontFamily="serif"
-                    android:gravity="start"
-                    android:text="@string/loading"
-                    android:textColor="#088F83"
-                    android:textSize="16sp"
-                    android:textStyle="bold"></TextView>
-
-
-            </LinearLayout>
-
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cardElevation="4dp"
-        app:cardUseCompatPadding="true">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:baselineAligned="false"
-            android:orientation="horizontal">
-
-            <LinearLayout
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical"
-                android:padding="16dp">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="4dp"
-                    android:text="@string/placed_date"
-                    android:textSize="16sp"></TextView>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/payment_mode"
-                    android:textSize="16sp"></TextView>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Payment Status"
-                    android:textSize="16sp"></TextView>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical"
-                android:padding="16dp">
-
-                <TextView
-                    android:id="@+id/orderPaymentDate"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="4dp"
                     android:gravity="end"
-                    android:text="@string/loading"
-                    android:textSize="@dimen/_12sdp"></TextView>
-
-                <TextView
-                    android:id="@+id/orderPaymentMode"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="end"
+                    android:textColor="@color/colorBlack"
                     android:textSize="@dimen/_12sdp"
-                    android:text="@string/loading"
-                    android:textStyle="bold"></TextView>
-
-                <TextView
-                    android:id="@+id/orderPaymentStatus"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="serif"
-                    android:gravity="end"
-                    android:text="@string/loading"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:textSize="@dimen/_14sdp"
                     android:textStyle="bold"></TextView>
 
             </LinearLayout>
 
         </LinearLayout>
+
     </androidx.cardview.widget.CardView>
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cardElevation="4dp"
-        app:cardUseCompatPadding="true">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#4DBEC1CA"
-            android:orientation="horizontal"
-            android:padding="16dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:fontFamily="serif"
-                android:text="@string/orderItemPaymentTotal"
-                android:textColor="@color/colorBlack"
-                android:textSize="16sp"
-                android:textStyle="bold"></TextView>
-
-            <TextView
-                android:id="@+id/orderPaymentTotal"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:fontFamily="serif"
-                android:gravity="end"
-                android:textColor="@color/colorBlack"
-                android:textSize="16sp"
-                android:textStyle="bold"></TextView>
-
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
-
 
 </LinearLayout>
