manuka - admin ordersmore component update and confirm delivered compnt

--- a/app/src/main/res/layout/manuka_admin_activity_more_actions_on_ad.xml
+++ b/app/src/main/res/layout/manuka_admin_activity_more_actions_on_ad.xml
@@ -396,7 +396,7 @@
             android:indeterminateTint="@color/colorWhite"
             android:indeterminateTintMode="src_atop"
             android:padding="@dimen/_4sdp"
-            android:background="@color/com_facebook_button_background_color"
+            android:background="@color/colorDangerDark"
             android:layout_height="@dimen/_32sdp"/>
 
         <Button
