--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="colorWhiteLite">#CCCCCC</color>
     <color name="colorDanger">#ff1a1a</color>
     <color name="colorDangerDark">#F44336</color>
+    <color name="colorDangerLight">#66F54336</color>
     <color name="colorWarning">#ffe066</color>
     <color name="colorHome">#e6ecff</color>
     <color name="colorGreen">#00a884</color>
