manuka - admin orders monthly statistics

--- a/app/src/main/res/layout/manuka_admin_activity_more_actions_on_ad.xml
+++ b/app/src/main/res/layout/manuka_admin_activity_more_actions_on_ad.xml
@@ -329,7 +329,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:layout_margin="@dimen/_4sdp"
-                    android:drawableLeft="@drawable/ic_baseline_check_box_outline_blank_24_ad"
+                    android:drawableStart="@drawable/ic_baseline_check_box_outline_blank_24_ad"
                     android:drawablePadding="@dimen/_4sdp"
                     android:text="BuyNow Ad"
                     android:textSize="@dimen/_14sdp"
@@ -341,7 +341,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:layout_margin="@dimen/_4sdp"
-                    android:drawableLeft="@drawable/ic_baseline_check_box_outline_blank_24_ad"
+                    android:drawableStart="@drawable/ic_baseline_check_box_outline_blank_24_ad"
                     android:drawablePadding="@dimen/_4sdp"
                     android:text="Approve Ad"
                     android:textSize="@dimen/_14sdp"
@@ -353,7 +353,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:layout_margin="@dimen/_4sdp"
-                    android:drawableLeft="@drawable/ic_baseline_check_box_outline_blank_24_ad"
+                    android:drawableStart="@drawable/ic_baseline_check_box_outline_blank_24_ad"
                     android:drawablePadding="@dimen/_4sdp"
                     android:text="Ad Available"
                     android:textSize="@dimen/_14sdp"
@@ -365,7 +365,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:layout_margin="@dimen/_4sdp"
-                    android:drawableLeft="@drawable/ic_baseline_check_box_outline_blank_24_ad"
+                    android:drawableStart="@drawable/ic_baseline_check_box_outline_blank_24_ad"
                     android:drawablePadding="@dimen/_4sdp"
                     android:text="Hide all numbers"
                     android:textSize="@dimen/_14sdp"
