--- a/app/src/main/res/layout/manuka_admin_fragment_product_statistics.xml
+++ b/app/src/main/res/layout/manuka_admin_fragment_product_statistics.xml
@@ -1,14 +1,115 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorHome"
+    android:orientation="vertical"
     tools:context=".ui.administration.order.ProductStatisticsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/_4sdp"
+        android:layout_marginTop="@dimen/_10sdp"
+        android:layout_marginBottom="@dimen/_4sdp"
+        android:elevation="@dimen/_14sdp"
+        app:cardCornerRadius="@dimen/_8sdp"
+        app:cardUseCompatPadding="true">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="@dimen/_8sdp">
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/yearLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="0.4"
+                android:clickable="true"
+                android:textColorHint="@color/colorBlue">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/yearEditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:clickable="true"
+                    android:enabled="true"
+                    android:focusableInTouchMode="false"
+                    android:hint="Select year..."
+                    android:inputType="number"
+                    android:textColorHint="@color/colorBlue"
+                    android:textCursorDrawable="@drawable/blue_cursur"
+                    android:textSize="@dimen/_12sdp"
+                    android:theme="@style/EditTextBlueTheme" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <Button
+                android:id="@+id/update"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_24sdp"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="0.8"
+                android:background="@drawable/button_round_fb"
+                android:text="Update"
+                android:textColor="@color/colorWhite"
+                android:textSize="@dimen/_10sdp"
+                android:visibility="visible" />
+
+            <ProgressBar
+                android:id="@+id/progressBar"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_24sdp"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="0.8"
+                android:background="@drawable/btn_grey_colour"
+                android:indeterminate="true"
+                android:indeterminateTint="@color/colorWhite"
+                android:indeterminateTintMode="src_atop"
+                android:padding="@dimen/_4sdp"
+                android:text="Update"
+                android:textColor="@color/colorWhite"
+                android:textSize="@dimen/_10sdp"
+                android:visibility="gone" />
+
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/_10sdp"
+        android:layout_marginTop="@dimen/_4sdp"
+        android:text="This bar graph represent Approved posted advertisements per month based on the selected year. Visibility of the advertisements are not considered."
+        android:textSize="@dimen/_10sdp"
+        android:textStyle="italic" />
 
-</FrameLayout>
+        <ir.androidexception.datatable.DataTable
+            android:id="@+id/data_table"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/_8sdp"
+            app:corner_radius="@dimen/_8sdp"
+            app:direction="rtl"
+            app:header_background_color="@color/colorWhite"
+            app:header_gravity="center"
+            app:header_horizontal_padding="@dimen/_4sdp"
+            app:header_text_color="@color/colorBlackText"
+            app:header_text_size="@dimen/_5sdp"
+            app:header_vertical_padding="@dimen/_8sdp"
+            app:persian_number="false"
+            app:row_background_color="@color/colorWhite"
+            app:row_gravity="center"
+            app:row_horizontal_padding="@dimen/_4sdp"
+            app:row_text_color="@color/colorBlackText"
+            app:row_text_size="@dimen/_4sdp"
+            app:row_vertical_padding="@dimen/_8sdp"
+            app:shadow="@dimen/_8sdp" />
+
+</LinearLayout>
